Fixing width issues on mobile

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0;
+    margin: 5px;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Helvetica';
@@ -7,18 +7,25 @@
 
 html,
 body {
-    width: 100%;
-    height: 100%;
-    /* background: #f1f1f1; */
-    /* background-image: url("macbook-air-m1.jpg"); */
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+img {
+  max-width: 400px;
+  height: auto;
+}
+
+@media (max-width: 750px) {
+  img {
+    max-width: 40%;
+    height: auto;
+  }
+}
+
 p {
     font-size: 12pt;
-    /* text-shadow: 0 0 10px; */
 }
 
 
